Re-Brand Türkanimu -> Türkanime

--- a/docs/V9.3.4.md
+++ b/docs/V9.3.4.md
@@ -1,7 +1,7 @@
-# 📋 TürkAnimu İndirici v9.3.4 Release Notes
+# 📋 TürkAnime İndirici v9.3.4 Release Notes
 
 ## 🎉 Genel Bakış
-TürkAnimu İndirici'nin v9.3.4 sürümü, kullanıcı deneyimini geliştiren önemli iyileştirmeler içeren bir güncellemedir. Bu sürümde gelişmiş arama özelliği, thread-safe UI güncellemeleri, anime adı otomatik düzeltme ve episode status senkronizasyonu gibi özellikler eklenmiştir. Kod kalitesi iyileştirmeleri ve performans optimizasyonları da yapılmıştır.
+TürkAnime İndirici'nin v9.3.4 sürümü, kullanıcı deneyimini geliştiren önemli iyileştirmeler içeren bir güncellemedir. Bu sürümde gelişmiş arama özelliği, thread-safe UI güncellemeleri, anime adı otomatik düzeltme ve episode status senkronizasyonu gibi özellikler eklenmiştir. Kod kalitesi iyileştirmeleri ve performans optimizasyonları da yapılmıştır.
 
 ## 📊 Sürüm Bilgileri
 - **Sürüm**: 9.3.4
@@ -124,6 +124,6 @@ Bu sürümün hazırlanmasında emeği geçenlere teşekkür ederiz:
 - **PyPI Package**: https://pypi.org/project/turkanime-cli/
 - **Releases**: https://github.com/barkeser2002/turkanime-gui/releases
 
-**Not**: Bu sürüm, TürkAnimu İndirici'nin kullanıcı deneyimini geliştiren önemli iyileştirmeler içerir. Gelişmiş arama özellikleri ve thread-safe UI ile daha akıcı bir kullanım deneyimi sunulmuştur.
+**Not**: Bu sürüm, TürkAnime İndirici'nin kullanıcı deneyimini geliştiren önemli iyileştirmeler içerir. Gelişmiş arama özellikleri ve thread-safe UI ile daha akıcı bir kullanım deneyimi sunulmuştur.
 
 🇹🇷 **Proudly made in Turkey** 🇹🇷
