--- a/docs/V9.3.5.md
+++ b/docs/V9.3.5.md
@@ -1,7 +1,7 @@
-# 📋 TürkAnimu İndirici v9.3.5 Release Notes
+# 📋 TürkAnime İndirici v9.3.5 Release Notes
 
 ## 🎉 Genel Bakış
-TürkAnimu İndirici'nin v9.3.5 sürümü, güncelleme yönetim sistemi ve kullanıcı ayarları alanında önemli iyileştirmeler içeren bir güncellemedir. Bu sürümde otomatik güncelleme kontrolü, dinamik versiyon yönetimi, platforma özel ayarlar ve gelişmiş GUI özellikleri eklenmiştir.
+TürkAnime İndirici'nin v9.3.5 sürümü, güncelleme yönetim sistemi ve kullanıcı ayarları alanında önemli iyileştirmeler içeren bir güncellemedir. Bu sürümde otomatik güncelleme kontrolü, dinamik versiyon yönetimi, platforma özel ayarlar ve gelişmiş GUI özellikleri eklenmiştir.
 
 ## 📊 Sürüm Bilgileri
 - **Sürüm**: 9.3.5
@@ -122,6 +122,6 @@ Bu sürümün hazırlanmasında emeği geçenlere teşekkür ederiz:
 - **PyPI Package**: https://pypi.org/project/turkanime-cli/
 - **Releases**: https://github.com/barkeser2002/turkanime-gui/releases
 
-**Not**: Bu sürüm, TürkAnimu İndirici'nin güncelleme yönetimini ve kullanıcı ayarlarını önemli ölçüde iyileştirir. Otomatik güncelleme kontrolü ve gelişmiş ayarlar ile daha kullanıcı dostu bir deneyim sunulmuştur.
+**Not**: Bu sürüm, TürkAnime İndirici'nin güncelleme yönetimini ve kullanıcı ayarlarını önemli ölçüde iyileştirir. Otomatik güncelleme kontrolü ve gelişmiş ayarlar ile daha kullanıcı dostu bir deneyim sunulmuştur.
 
 🇹🇷 **Proudly made in Turkey** 🇹🇷
