--- a/docs/V9.4.0.md
+++ b/docs/V9.4.0.md
@@ -1,4 +1,4 @@
-# TürkAnimu İndirici v9.4.0 Release Notes
+# TürkAnime İndirici v9.4.0 Release Notes
 
 ## Genel Bakış
 v9.4.0 sürümü Anizle kaynağının tam entegrasyonunu getiriyor. Cloudflare bypass sistemini güçlendirdik, performansı ciddi ölçüde iyileştirdik ve paralel işleme desteği ekledik. Anizle API'si baştan yazıldı ve GUI'ye eklendi.
@@ -160,6 +160,6 @@ BIN_PATH                               # bin/ klasör yolu
 - **PyPI Package**: https://pypi.org/project/turkanime-gui/
 - **Releases**: https://github.com/barkeser2002/turkanime-gui/releases
 
-**Not**: Bu sürüm, TürkAnimu İndirici'nin en büyük kaynak güncellemelerinden biridir. Anizle kaynağının tam entegrasyonu ile kullanıcılar artık 4500+ anime içeriğine hızlı ve güvenilir şekilde erişebilir.
+**Not**: Bu sürüm, TürkAnime İndirici'nin en büyük kaynak güncellemelerinden biridir. Anizle kaynağının tam entegrasyonu ile kullanıcılar artık 4500+ anime içeriğine hızlı ve güvenilir şekilde erişebilir.
 
 🇹🇷 **Proudly made in Turkey** 🇹🇷
