--- a/docs/V9.4.1.md
+++ b/docs/V9.4.1.md
@@ -1,4 +1,4 @@
-# TürkAnimu İndirici v9.4.1 Release Notes
+# TürkAnime İndirici v9.4.1 Release Notes
 
 ## Genel Bakış
 v9.4.1 sürümü kritik bir domain güncellemesi içermektedir. TürkAnime'nin `.co` domaininden `.tv` domainine geçişi nedeniyle uygulamanın bağlantı sorunları yaşaması düzeltildi. Ayrıca versiyon yönetim sistemi iyileştirildi.
@@ -97,7 +97,7 @@ Domain değişikliğini fark edip bildirdiği ve kapsamlı düzeltmeleri içeren
 - 🔧 `update_manager.py` - Versiyon yönetimi iyileştirmesi
 - 🔧 `__init__.py` - UpdateManager entegrasyonu
 
-Topluluk katkıları TürkAnimu'yu daha iyi yapıyor! 💪
+Topluluk katkıları TürkAnime'yu daha iyi yapıyor! 💪
 
 ## 📞 Destek ve Geri Bildirim
 - **GitHub Issues**: [Sorun Bildir](https://github.com/barkeser2002/turkanime-gui/issues)
